welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:14: error: identifier expected but string literal found.
def isFacingTrail("c": String):Boolean = {
                  ^SlugSnail:30: error: ':' expected but '}' found.
}
^